--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
